--- a/public/generate-bill/purchase-print-bill.html
+++ b/public/generate-bill/purchase-print-bill.html
@@ -14,7 +14,7 @@
         <div class="header-actions">
             <button class="print-button" id="print-btn" onclick="printBill()">Print</button>
             <button class="share-button" id="share-btn" onclick="shareBill()">Share PDF</button>
-            <a href="javascript:history.back()" class="back-button">Back</a>
+            <a href="generate-bill.html" class="back-button">Back</a>
         </div>
     </header>
 
@@ -185,7 +185,7 @@
             </svg>
             Share
         </button>
-        <button class="mobile-btn back-btn" onclick="history.back()">
+<button class="mobile-btn back-btn" onclick="window.location.href='generate-bill.html'">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <line x1="19" y1="12" x2="5" y2="12"></line>
                 <polyline points="12 19 5 12 12 5"></polyline>
