--- a/public/generate-bill/purchase-slip.html
+++ b/public/generate-bill/purchase-slip.html
@@ -723,8 +723,8 @@
                         setTimeout(() => {
                             successMessage.classList.add('hidden');
                             // Open print view and refresh form
-                            window.open(`purchase-print-bill.html?billNumber=${billNumber}`, '_blank');
-                            location.reload(); 
+                            window.location.href = `purchase-print-bill.html?billNumber=${billNumber}`;
+                            // location.reload(); 
                         }, 2000);
                         
                     } else {
